# krafter

./: .gitignore  CHANGELOG.md  README.md
.claude-plugin/: marketplace.json  plugin.json
skills/contract-branch/toolkit/: CLAUDE.md  Cargo.toml  Makefile  README.md
skills/contract-branch/toolkit/scripts/: check-rust-architecture.sh  check-rust-loc.sh  check-rust-positionals.sh
skills/contract-branch/toolkit/src/: main.rs
skills/contract-branch/toolkit/src/cmd/: mod.rs
skills/contract-branch/toolkit/src/git/: diff.rs  mod.rs  repo.rs
skills/contract-branch/toolkit/src/surface/: deprecate.rs  lang.rs  mod.rs  model.rs  node.rs  parse.rs  sig.rs
skills/contract-branch/toolkit/src/util/: defaults.rs  mod.rs  source.rs
skills/contract-branch/toolkit/tests/: assess.rs  deprecation.rs  determinism.rs  formatting.rs  gate.rs  languages.rs  surface.rs  typelevel.rs
skills/contract-branch/toolkit/tests/common/: mod.rs
skills/quality-branch/toolkit/: CLAUDE.md  Cargo.toml  Makefile  README.md
skills/quality-branch/toolkit/scripts/: check-rust-magic.sh
skills/quality-branch/toolkit/src/: main.rs
skills/quality-branch/toolkit/src/cmd/: mod.rs
skills/quality-branch/toolkit/src/engine/: analyze.rs  flatten.rs  mod.rs  model.rs  pair.rs  scan.rs
skills/quality-branch/toolkit/src/git/: blob.rs  churn.rs  diff.rs  mod.rs
skills/quality-branch/toolkit/src/util/: defaults.rs  mod.rs  stats.rs
skills/quality-branch/toolkit/tests/: assess.rs  calibrate.rs  coupling.rs  delta.rs  determinism.rs  dup.rs  hotspot.rs  metrics.rs
skills/quality-branch/toolkit/tests/common/: mod.rs
skills/red-team-branch/toolkit/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  redteam.example.toml
skills/red-team-branch/toolkit/scripts/: check-rust-architecture.sh  check-rust-magic.sh  check-rust-oracle-coverage.sh  check-rust-positionals.sh
skills/red-team-branch/toolkit/src/: main.rs
skills/red-team-branch/toolkit/src/cmd/: mod.rs
skills/red-team-branch/toolkit/src/config/: ctx.rs  defaults.rs  load.rs  mod.rs  model.rs  overrides.rs
skills/red-team-branch/toolkit/src/http/: client.rs  guard.rs  mod.rs  request.rs  response.rs  send.rs  status.rs  tests.rs  url.rs
skills/red-team-branch/toolkit/src/util/: hash.rs  mod.rs  parse.rs  stats.rs  text.rs
skills/red-team-branch/toolkit/tests/: bopla.rs  callback.rs  cors.rs  discover.rs  fuzz.rs  fuzz_feedback.rs  fuzz_inject.rs  fuzz_oracle.rs  gql.rs  headers.rs  jwt.rs  matrix.rs  params.rs  race.rs  recon.rs  sign.rs  smuggle.rs  sweep.rs  timing.rs
skills/red-team-branch/toolkit/tests/common/: mod.rs  runner.rs  server.rs
skills/red-team-branch/toolkit/tests/discover_safe/: mod.rs
skills/red-team-branch/toolkit/tests/fuzz_inject_fixtures/: mod.rs
skills/red-team-branch/toolkit/tests/fuzz_oracle_fixtures/: mod.rs
(+222 files in other folders)
