[package]
name = "redteam-toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/iaserrat/krafter"
description = "rtk — offensive Swiss-army toolkit driven by the red-team-branch skill (local-only by default)"

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "cookies"] }
futures = "0.3"
tiny_http = "0.12"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
anyhow = "1"
url = "2"

[profile.release]
opt-level = 2
